Change  by <CR> and Add XML support

--- a/README
+++ b/README
@@ -47,6 +47,7 @@ The leader key is ","
 # Tips
   mouse enabled, use maj when selecting text to allow ctrl-maj-c
   You can use autocompletion with tab
+  XML autocomplete
 
 
 GIT
