explain XML complete

--- a/README
+++ b/README
@@ -46,7 +46,7 @@ The leader key is ","
 
 # Tips
   mouse enabled, use maj when selecting text to allow ctrl-maj-c
-  XML autocomplete
+  XML autocomplete juste write the body and then tab : p TAB -> <p></p>
 
 # Completion
   You can use autocompletion with tab
