--- a/README
+++ b/README
@@ -5,7 +5,9 @@ usable for anyone who know how to use this editor.
 It should not confilct with your habbit if you are fammiliar with Vim.
 
 This project use pathogen to keep each plugin in a separate folder (bundle).
-Plugins are include are submodules and so stay under responsibility of their creator.
+Plugins are include as submodules and so stay under responsibility of their creators.
+
+Copyright (C) 2016 Charles Gueunet
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -33,8 +35,7 @@ If you have already cloned this repo without the --recursive you can use :
 
 git submodule update --init
 
-
-To install eclim (not used for a long time): 
+To install eclim (not used for a long time):
     java -jar eclim_2.4.1.jar
 
 To install ctags (or choose your distribution version):
